chore(ToggleGroup): fix gap / different rounding of wrapper and first item

--- a/@udir-design/react/src/components/toggleGroup/togglegroup.css
+++ b/@udir-design/react/src/components/toggleGroup/togglegroup.css
@@ -1,4 +1,5 @@
 :is(.ds-togglegroup, .ds-toggle-group) {
+  overflow-x: initial; /* fixes gap between border-radius of fieldset and label, but will prevent horizontal scroll */
   box-sizing: border-box;
   height: var(--dsc-togglegroup-button-size);
   button {
